# sunba.dev

./: .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.yml  dockerfile
.github/workflows/: build_push_deploy.yml
ansible/group_vars/: k3s_cluster.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: kubernetes.yml  security.yml  setup.yml  site.yml
app/: Dockerfile  config.py  main.py  pyproject.toml
app/api/endpoints/: terminal.py
app/core/: jenkins.py  terminal.py
app/utils/: security.py
backend/: config.py  dev.Dockerfile  main.py  prod.Dockerfile  pyproject.toml
backend/api/: dependencies.py
backend/api/endpoints/: terminal.py  webhook.py
backend/core/: terminal.py
backend/webfs/about/: me.txt
django/: Dockerfile  pyproject.toml
django/app/app/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py
django/app/templates/: 404.html  home.html
frontend/: Dockerfile  app.js  index.html  index.js  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: index.js
frontend/styles/: style.css
jenkins/: Jenkinsfile
jenkins/pipelines/: Jenkinsfile
kubernetes/base/: kustomization.yaml  traefik-config.yaml
kubernetes/clusterwide/: clusterissuer.yaml  clusterrole.yaml  rolebinding.yaml
learningapp/learningapp/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  dev.Dockerfile  nginx-dev.conf  nginx.conf  nginx.conf.template  prod.Dockerfile
web/: Dockerfile  manage.py  requirements.txt  robots.txt
web/learningapp/: settings.py  urls.py  views.py
web/templates/: about.html
(+42 files in other folders)
