[tool.poetry]
name = "django-web"
version = "0.1.0"
description = ""
authors = ["Franek Suszko <franeksu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
psycopg = "^3.2.2"
daphne = "^4.1.2"
channels = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
